feat : updated conversationnal prompt